--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Page Styler</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<ul id="switcher">
-			<li class="smaller">A-</li>
-			<li class="normal">A</li>
-			<li class="bigger">A+</li>
-		</ul>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Page Styler</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <ul id="switcher">
+      <li class="smaller">A-</li>
+      <li class="normal">A</li>
+      <li class="bigger">A+</li>
+    </ul>
 
-		<h1>Page Styler</h1>
+    <h1 class="words">Page Styler</h1>
 
-		<p>Click the buttons above to change the page styles!</p>
-	</body>
+    <p class="words">Click the buttons above to change the page styles!</p>
+    <script src="main.js"></script>
+  </body>
 </html>
