--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <ul id="switcher">
+    <ul id="font-switcher">
       <li class="smaller">A-</li>
       <li class="normal">A</li>
       <li class="bigger">A+</li>
     </ul>
-
-    <h1 class="words">Page Styler</h1>
-
-    <p class="words">Click the buttons above to change the page styles!</p>
+    <ul id="bg-switcher">
+      <li id="red">Red</li>
+      <li id="green">Green</li>
+      <li id="blue">Blue</li>
+    </ul>
+    <div>
+      <h1>Page Styler</h1>
+      <p>Click the buttons above to change the page styles!</p>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
